@@ -53,13 +53,16 @@ IN DEVELOPMENT
 
     * Merging from a previously joined branch will no longer cause 
       a traceback. (Jelmer Vernooij, #203376)
-    
+
     * Running ``bzr st PATH_TO_TREE`` will no longer suppress merge
       status. Status is also about 7% faster on mozilla sized trees
       when the path to the root of the tree has been given. Users of
       the internal ``show_tree_status`` function should be aware that
       the show_pending flag is now authoritative for showing pending
       merges, as it was originally. (Robert Collins, #225204)
+
+    * Set valid default _param_name for Option so that ListOption can embed
+      '-' in names. (Vincent Ladeuil, #263249)
 
     * ``WorkingTree4`` trees will now correctly report missing-and-new
       paths in the output of ``iter_changes``. (Robert Collins)
